k8s/frontend-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport-service
  namespace: demo-app
  labels:
    app: frontend
    component: ui
    tier: frontend
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30000
      protocol: TCP
  selector:
    app: frontend
    component: ui
